@@ -1,4 +1,4 @@
-.TH SG_SCAN "8" "April 2009" "sg3_utils\-1.27" SG3_UTILS
+.TH SG_SCAN "8" "February 2010" "sg3_utils\-1.29" SG3_UTILS
 .SH NAME
 sg_scan \- scan storage devices and map to volume names
 .SH SYNOPSIS
@@ -35,7 +35,7 @@ trailing ",<lun>" to be omitted in which case a lun of zero is assumed. This
 lower level device name cannot often be used directly since Windows blocks
 attempts to use it if a class driver has "claimed" the device. There are
 SCSI device types (e.g. Automation/Drive interface type) for which there is
-no class driver. At least two transports ("bus types" in Windows jargin"):
+no class driver. At least two transports ("bus types" in Windows jargin):
 USB and IEEE 1394 do not have a "scsi" device names of this form.
 .PP
 In keeping with DOS file system conventions, the various device names
@@ -159,7 +159,7 @@ the sg3_utils(8) man page.
 .SH AUTHORS
 Written by D. Gilbert
 .SH COPYRIGHT
-Copyright \(co 2006-2009 Douglas Gilbert
+Copyright \(co 2006-2010 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
