@@ -2,7 +2,8 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.29 [20100129] [svn: r324]
+Changelog for sg3_utils-1.29 [20100208] [svn: r325]
+  - sg_start: add '--readonly' option for ATA disks
   - sg_lib: update asc/ascq list to spc4r22
   - sg_inq_data: update version descriptor list to spc4r22
   - sg_vpd: block device characteristics page: fix form factor
